// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.proto;

option go_package = "infra/unifiedfleet/api/v1/proto;ufspb";

import "infra/unifiedfleet/api/v1/proto/location.proto";

// Next Tag: 3
message ChopsAsset {
  // Asset's state and location
  string id = 1;
  Location location = 2;
}
